# devlab

./: .gitignore  flake.nix  shell.nix
cpp/01_hello/: main.cpp
cpp/02_tmp/: main.cpp
cpp/02_tmp/.cache/clangd/index/: main.cpp.29B7A07A656D1D45.idx
cpp/03_jthread/src/: main.cpp
cpp/04_interview_examples_clang/: .clangd  CMakeLists.txt  README.md  default.nix  flake.nix  main.cpp
cpp/04_interview_examples_clang/examples/: basic.cpp
cpp/04_interview_examples_clang/src/: CMakeLists.txt  main.cpp
cpp/04_interview_examples_clang/src/examples/: CMakeLists.txt  basic.cpp
cpp/05_clang_p2996_devpod/.devcontainer/: Dockerfile  devcontainer.json  setup.sh
cpp/05_clang_p2996_devpod/sample-app/: CMakeLists.txt  Makefile  main.cpp
d/: main.d
go/: README.md
go/01_helloworld/: main.go
go/02_module/: main.go
go/02_modules/: README.md  go.mod  main.go
go/02_modules/module1/: go.mod  metainfo.go
go/02_modules/module1/funcs/: functions.go
go/02_modules/module2/: go.mod  metainfo.go
go/02_modules/module2/funcs/: functions.go
go/03_marshal/: go.mod  main.go
go/04_concurrency/: README.md  go.mod  main.go
go/04_concurrency/examples/: 01_deadlock.go  02_detached.go  03_waitgroup.go  04_hellochannel.go  05_bufferedchannels.go  06_select.go
rust/: README.md
rust/02_debug/: main.rs
zig/: README.md  default.nix  flake.nix
zig/02_comptime/: main.zig
zig/03_args/: build.zig  build.zig.zon
zig/03_args/src/: main.zig
zig/04_validation/: build.zig  build.zig.zon
zig/04_validation/src/: main.zig
zig/examples/02_comptime/: main.zig
